se limpió el código de los comentarios que tenía

--- a/crud.html
+++ b/crud.html
@@ -8,11 +8,21 @@
 </head>
 <body>
     <div>
-        <form method="GET" action="http://localhost:3000/traetetodoslosposts2">
+        <form method="GET" action="http://localhost:3000/armateunadb2">
+            <button type="submit">Create DB</button>
+        </form>
+        <form method="GET" action="http://localhost:3000/armateuntable2">
+            <button type="submit">Create Table</button>
+        </form>
+        <form method="GET" action="http://localhost:3000/insertnuevoenpost2">
             <!-- <label>Title</label><input type="text"/>
             <label>Body</label><input type="text"/> -->
-            <button type="submit">select ALL</button>
+            <button type="submit">Insert New</button>
         </form>
+        <form method="GET" action="http://localhost:3000/traetetodoslosposts2">
+            <button type="submit">Select ALL</button>
+        </form>        
+
     </div>
     <script src="./Backend/funcionesBD.js"></script>
 </body>
